--- a/sudoku/build.gradle
+++ b/sudoku/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
 repositories {
     mavenCentral()
@@ -7,3 +8,5 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.12'
 }
+
+mainClassName = "Application"
